clusters/ocelot.archifleks.xyz/seed/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seed
  name: radarr
spec:
  ports:
    - port: 7878
  selector:
    app: radarr
  type: ClusterIP
